force-app/main/default/objects/Patient__c/fields/Latest_Discharge_To_From__c.field-meta.xml
<CustomField>
    <fullName>Latest_Discharge_To_From__c</fullName>
    <formula>Latest_Discharge__r.To_From_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Discharge To/From</label>
    <type>Text</type>
</CustomField>