force-app/main/default/objects/Patient__c/fields/Latest_ICD_10_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_ICD_10_Check_Date__c</fullName>
    <label>Latest ICD 10 Check Date</label>
    <type>Date</type>
</CustomField>