force-app/main/default/objects/Patient__c/fields/Latest_Middle_Name_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Middle_Name_Check_Date__c</fullName>
    <label>Latest Middle Name Check Date</label>
    <type>Date</type>
</CustomField>