force-app/main/default/objects/Patient__c/fields/Latest_Multi_Visit_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Latest_Multi_Visit_DateTime__c</fullName>
    <label>Latest Multi Visit DateTime</label>
    <type>DateTime</type>
</CustomField>