force-app/main/default/objects/Patient__c/fields/Latest_Not_Seen_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Latest_Not_Seen_DateTime__c</fullName>
    <label>Latest Not Seen DateTime</label>
    <type>DateTime</type>
</CustomField>