force-app/main/default/objects/Patient__c/fields/Latest_Payer_Verification__c.field-meta.xml
<CustomField>
    <fullName>Latest_Payer_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Payer Verification</label>
    <referenceTo>Payer_Verification__c</referenceTo>
    <relationshipLabel>Patients</relationshipLabel>
    <relationshipName>Patients</relationshipName>
    <type>Lookup</type>
</CustomField>