force-app/main/default/objects/Patient__c/fields/Latest_Payer_Verification_Check__c.field-meta.xml
<CustomField>
    <fullName>Latest_Payer_Verification_Check__c</fullName>
    <label>Latest Payer Verification Check</label>
    <type>DateTime</type>
</CustomField>