force-app/main/default/objects/Patient__c/fields/Latest_Payer_Verification_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Latest_Payer_Verification_Scenario__c</fullName>
    <formula>TEXT(Latest_Payer_Verification__r.Scenario__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Payer Verification Scenario</label>
    <type>Text</type>
</CustomField>