force-app/main/default/objects/Patient__c/fields/Latest_Primary_Payer__c.field-meta.xml
<CustomField>
    <fullName>Latest_Primary_Payer__c</fullName>
    <formula>Latest_Payer_Verification__r.Primary_Payer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Primary Payer</label>
    <type>Text</type>
</CustomField>