force-app/main/default/objects/Patient__c/fields/Latest_Visit_Provider__c.field-meta.xml
<CustomField>
    <fullName>Latest_Visit_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Visit Provider</label>
    <referenceTo>Front_End_User__c</referenceTo>
    <relationshipLabel>Patients (Latest Visit Provider)</relationshipLabel>
    <relationshipName>Patients3</relationshipName>
    <type>Lookup</type>
</CustomField>