force-app/main/default/objects/Patient__c/fields/Longevity__c.field-meta.xml
<CustomField>
    <fullName>Longevity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Longevity</label>
    <type>Checkbox</type>
</CustomField>