force-app/main/default/objects/Patient__c/fields/Matrix_Id__c.field-meta.xml
<CustomField>
    <fullName>Matrix_Id__c</fullName>
    <label>Matrix Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>