force-app/main/default/objects/Patient__c/fields/Medicaid__c.field-meta.xml
<CustomField>
    <fullName>Medicaid__c</fullName>
    <label>Medicaid #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>