force-app/main/default/objects/Patient__c/fields/Medicaid_Plan__c.field-meta.xml
<CustomField>
    <fullName>Medicaid_Plan__c</fullName>
    <label>Medicaid Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>