force-app/main/default/objects/Patient__c/fields/Medicare__c.field-meta.xml
<CustomField>
    <fullName>Medicare__c</fullName>
    <label>Medicare #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>