force-app/main/default/objects/Patient__c/fields/Medicare_Advantage__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Advantage__c</fullName>
    <label>Medicare Advantage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>