force-app/main/default/objects/Patient__c/fields/Needs_Thoroughcare_Reenrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Needs_Thoroughcare_Reenrollment_Date__c</fullName>
    <label>Needs Thoroughcare Reenrollment Date</label>
    <type>Date</type>
</CustomField>