force-app/main/default/objects/Patient__c/fields/Neterra_ID__c.field-meta.xml
<CustomField>
    <fullName>Neterra_ID__c</fullName>
    <label>Neterra ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>