force-app/main/default/objects/Patient__c/fields/No_Community_Provider__c.field-meta.xml
<CustomField>
    <fullName>No_Community_Provider__c</fullName>
    <formula>if(
or(
 Facility_State__c = &quot;WI&quot;,
 Facility_State__c = &quot;IL&quot;,
 Facility_State__c = &quot;AL&quot;,
 Facility_State__c = &quot;MO&quot;,
 Facility_State__c = &quot;TN&quot;,
 Facility_State__c = &quot;WA&quot;,
 Facility_State__c = &quot;OH&quot;,
 Facility_State__c = &quot;MA&quot;,
 Facility_State__c = &quot;CA&quot;,
 Facility_State__c = &quot;RI&quot;
),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Community Provider</label>
    <type>Checkbox</type>
</CustomField>