force-app/main/default/objects/Patient__c/fields/No_Texts__c.field-meta.xml
<CustomField>
    <fullName>No_Texts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Texts</label>
    <type>Checkbox</type>
</CustomField>