force-app/main/default/objects/Patient__c/fields/Nucleus_ID__c.field-meta.xml
<CustomField>
    <fullName>Nucleus_ID__c</fullName>
    <label>Nucleus ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>