force-app/main/default/objects/Patient__c/fields/Parent_Company__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company__c</fullName>
    <formula>Facility__r.Parent_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Company</label>
    <type>Text</type>
</CustomField>