force-app/main/default/objects/Patient__c/fields/Payer_Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Payer_Eligibility_Status__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <label>Payer Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>