force-app/main/default/objects/Patient__c/fields/PCC_Contacts_Added_DateTime__c.field-meta.xml
<CustomField>
    <fullName>PCC_Contacts_Added_DateTime__c</fullName>
    <label>PCC Contacts Added DateTime</label>
    <type>DateTime</type>
</CustomField>