force-app/main/default/objects/Patient__c/fields/PCC_Document_Uploaded_Before_Discharge__c.field-meta.xml
<CustomField>
    <fullName>PCC_Document_Uploaded_Before_Discharge__c</fullName>
    <formula>PCC_Document_Uploaded_Date__c &lt;  Latest_Discharge_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PCC Document Uploaded Before Discharge</label>
    <type>Checkbox</type>
</CustomField>