force-app/main/default/objects/Patient__c/fields/PCC_Document_Uploaded_Date__c.field-meta.xml
<CustomField>
    <fullName>PCC_Document_Uploaded_Date__c</fullName>
    <label>PCC Document Uploaded Date</label>
    <type>Date</type>
</CustomField>