force-app/main/default/objects/Patient__c/fields/PCC_Insurance_Name__c.field-meta.xml
<CustomField>
    <fullName>PCC_Insurance_Name__c</fullName>
    <label>PCC Insurance Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>