force-app/main/default/objects/Patient__c/fields/PCC_Payer__c.field-meta.xml
<CustomField>
    <fullName>PCC_Payer__c</fullName>
    <label>PCC Payer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>