force-app/main/default/objects/Patient__c/fields/PCC_Resident_Id__c.field-meta.xml
<CustomField>
    <fullName>PCC_Resident_Id__c</fullName>
    <label>PCC Resident Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>