force-app/main/default/objects/Patient__c/fields/Phone_3__c.field-meta.xml
<CustomField>
    <fullName>Phone_3__c</fullName>
    <label>Phone 3</label>
    <type>Phone</type>
</CustomField>