force-app/main/default/objects/Patient__c/fields/Prior_Initial_Visit__c.field-meta.xml
<CustomField>
    <fullName>Prior_Initial_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior Initial Visit</label>
    <type>Checkbox</type>
</CustomField>