force-app/main/default/objects/Patient__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>If(
and(
(NOW() - Latest_Discharge__r.Census_Date__c) * 24 &lt; 48,
or(
 Count_of_Calls__c &lt; 2,
Count_of_Calls__c = null)),
&quot;1&quot;,
if(
(NOW() - Latest_Discharge__r.Census_Date__c) * 24 &lt; 48,
&quot;2&quot;,
if(
and(
today() - Latest_Discharge_Date__c &lt; 15,
not(isblank(Latest_Discharge_Date__c))
),
&quot;3&quot;,
&quot;4&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <type>Text</type>
</CustomField>