force-app/main/default/objects/Patient__c/fields/Pulse__c.field-meta.xml
<CustomField>
    <fullName>Pulse__c</fullName>
    <label>Pulse</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>