force-app/main/default/objects/Patient__c/fields/Pulse_Captured_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Pulse_Captured_Date_Time__c</fullName>
    <label>Pulse Captured Date/Time</label>
    <type>DateTime</type>
</CustomField>