force-app/main/default/objects/Patient__c/fields/Refusal_Note__c.field-meta.xml
<CustomField>
    <fullName>Refusal_Note__c</fullName>
    <label>Refusal Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>