force-app/main/default/objects/Patient__c/fields/Refusal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Refusal_Reason__c</fullName>
    <label>Refusal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Already receiving similar services</fullName>
            </value>
            <value>
                <fullName>Not familiar with referral location</fullName>
            </value>
            <value>
                <fullName>Hospice</fullName>
            </value>
            <value>
                <fullName>No place of residence</fullName>
            </value>
            <value>
                <fullName>Admitted in ALF with services in place</fullName>
            </value>
            <value>
                <fullName>Hung up and declined subsequent outbound calls</fullName>
            </value>
            <value>
                <fullName>Out of service area</fullName>
            </value>
            <value>
                <fullName>Unable to hold appointment</fullName>
                <isActive>false</isActive>
                <label>Unable to hold appointment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>