force-app/main/default/objects/Patient__c/fields/Rerun_Payer_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Rerun_Payer_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rerun Payer Eligibility</label>
    <type>Checkbox</type>
</CustomField>