force-app/main/default/objects/Patient__c/fields/Respiration__c.field-meta.xml
<CustomField>
    <fullName>Respiration__c</fullName>
    <label>Respiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>