force-app/main/default/objects/Patient__c/fields/Room_No_Id__c.field-meta.xml
<CustomField>
    <fullName>Room_No_Id__c</fullName>
    <formula>Room_Number__c &amp; &quot; - &quot; &amp; CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Room No Id</label>
    <type>Text</type>
</CustomField>