force-app/main/default/objects/Patient__c/fields/Run_Payer_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Run_Payer_Eligibility__c</fullName>
    <formula>Facility__r.Parent_Company__r.Run_Payer_Eligibility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Run Payer Eligibility</label>
    <type>Checkbox</type>
</CustomField>