force-app/main/default/objects/Patient__c/fields/Run_Payer_Override__c.field-meta.xml
<CustomField>
    <fullName>Run_Payer_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Payer Override</label>
    <type>Checkbox</type>
</CustomField>