force-app/main/default/objects/Patient__c/fields/Seen_In_Facility__c.field-meta.xml
<CustomField>
    <fullName>Seen_In_Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seen In Facility</label>
    <type>Checkbox</type>
</CustomField>