force-app/main/default/objects/Patient__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transitional care management (Initial)</fullName>
            </value>
            <value>
                <fullName>Chronic care management (Initial)</fullName>
            </value>
            <value>
                <fullName>TCM follow up</fullName>
            </value>
            <value>
                <fullName>CCM follow up</fullName>
            </value>
            <value>
                <fullName>BHI</fullName>
            </value>
            <value>
                <fullName>Physician visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>