force-app/main/default/objects/Patient__c/fields/Show_On_Reports__c.field-meta.xml
<CustomField>
    <fullName>Show_On_Reports__c</fullName>
    <formula>IF(
    TEXT(Community_Status__c) = &quot;New&quot;,
    IF(
        Discharge_Date__c &gt; DATE(2024, 11, 21),
        TRUE,
        FALSE
    ),
    IF(
        Discharge_Date__c &gt; DATE(2024, 10, 11),
        TRUE,
        FALSE
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show On Reports</label>
    <type>Checkbox</type>
</CustomField>