force-app/main/default/objects/Patient__c/fields/Thoroughcare_ID__c.field-meta.xml
<CustomField>
    <fullName>Thoroughcare_ID__c</fullName>
    <label>Thoroughcare ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>