force-app/main/default/objects/Patient__c/fields/Time_Passed_In_48_Hour_Window__c.field-meta.xml
<CustomField>
    <fullName>Time_Passed_In_48_Hour_Window__c</fullName>
    <formula>IF(
  OR(
    (NOW() - Latest_Discharge__r.Census_Date__c) * 24 &gt; 48,
    ISBLANK(Latest_Discharge__c)
  ),
  NULL,
  (NOW() - Latest_Discharge__r.Census_Date__c) * 24
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Passed In 48 Hour Window</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>