force-app/main/default/objects/Patient__c/fields/Unable_to_Service_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unable_to_Service_Reason__c</fullName>
    <label>Unable to Service Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>