force-app/main/default/objects/Patient__c/fields/Won_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Won_Date_Time__c</fullName>
    <label>Won Date Time</label>
    <type>DateTime</type>
</CustomField>