force-app/main/default/objects/Patient__c/fields/X4_Days_After_Last_SMS__c.field-meta.xml
<CustomField>
    <fullName>X4_Days_After_Last_SMS__c</fullName>
    <formula>if(
and(
today() - datevalue(Last_SMS_Sent_Date__c) &gt;= 4,
not(isblank(Last_SMS_Sent_Date__c))),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>4 Days After Last SMS</label>
    <type>Checkbox</type>
</CustomField>