force-app/main/default/objects/Patient__c/validationRules/Community_Won_DOB_Gender.validationRule-meta.xml
<ValidationRule>
    <fullName>Community_Won_DOB_Gender</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT(Community_Status__c ) = &quot;Closed Won&quot;, OR(ISBLANK( Date_of_Birth__c ),ISBLANK( TEXT(Gender__c ))))</errorConditionFormula>
    <errorMessage>Won Community Patients Must Have a DOB and Gender</errorMessage>
</ValidationRule>