force-app/main/default/objects/Patient__c/listViews/All_Patients_Closed_Won.listView-meta.xml
<ListView>
    <fullName>All_Patients_Closed_Won</fullName>
    <columns>NAME</columns>
    <columns>Facility__c</columns>
    <columns>Facility_State__c</columns>
    <columns>Discharge_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TCM_Eligible__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Discharged_Home__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Latest_Discharge_Date__c</field>
        <operation>greaterThan</operation>
        <value>10/11/2024</value>
    </filters>
    <filters>
        <field>Community_Status__c</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <label>All Patients Closed Won</label>
    <sharedTo>
        <group>Data_Analyst</group>
        <group>Scheduling</group>
    </sharedTo>
</ListView>