force-app/main/default/objects/Patient__c/listViews/All_Patients_Working.listView-meta.xml
<ListView>
    <fullName>All_Patients_Working</fullName>
    <columns>NAME</columns>
    <columns>Facility__c</columns>
    <columns>Facility_State__c</columns>
    <columns>Discharge_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TCM_Eligible__c</columns>
    <columns>Community_Status_Updated_Date__c</columns>
    <columns>Consent_Datetime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Facility__c</field>
        <operation>equals</operation>
        <value>Chapel Manor Center</value>
    </filters>
    <label>All Patients Working</label>
    <sharedTo>
        <group>Data_Analyst</group>
        <group>Scheduling</group>
    </sharedTo>
</ListView>