force-app/main/default/objects/Patient__c/listViews/Consent_List.listView-meta.xml
<ListView>
    <fullName>Consent_List</fullName>
    <columns>NAME</columns>
    <columns>BHI__c</columns>
    <columns>CCM__c</columns>
    <columns>Consent_Status__c</columns>
    <columns>Facility__c</columns>
    <columns>Status__c</columns>
    <columns>Latest_Primary_Payer__c</columns>
    <columns>Latest_Payer_Verification__c</columns>
    <columns>ISNP__c</columns>
    <columns>Payer_Eligibility_Status__c</columns>
    <columns>First_Name__c</columns>
    <columns>Thoroughcare_ID__c</columns>
    <columns>Admission_Date__c</columns>
    <columns>Consent_Datetime__c</columns>
    <columns>Date_Thoroughcare_Profile_Updated__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Facility__c</field>
        <operation>contains</operation>
        <value>Nassau</value>
    </filters>
    <label>Consent List</label>
</ListView>