force-app/main/default/objects/Patient__c/listViews/Manual_Consent_List.listView-meta.xml
<ListView>
    <fullName>Manual_Consent_List</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Birth__c</columns>
    <columns>Facility__c</columns>
    <columns>Consent_Datetime__c</columns>
    <columns>Consent_Status__c</columns>
    <columns>Payer_Eligibility_Status__c</columns>
    <columns>Latest_Payer_Verification_Scenario__c</columns>
    <columns>Status__c</columns>
    <columns>Medicaid__c</columns>
    <columns>Room_Number__c</columns>
    <columns>PCC_Resident_Id__c</columns>
    <columns>PCC_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Latest_ICD_10_Check_Date__c</columns>
    <columns>Thoroughcare_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Facility__c</field>
        <operation>contains</operation>
        <value>seminole,palma sola,at the palms</value>
    </filters>
    <label>Manual Consent List</label>
</ListView>