force-app/main/default/objects/Patient__c/listViews/My_Patients_New.listView-meta.xml
<ListView>
    <fullName>My_Patients_New</fullName>
    <columns>NAME</columns>
    <columns>Facility__c</columns>
    <columns>Facility_State__c</columns>
    <columns>Discharge_Date__c</columns>
    <columns>TCM_Eligible__c</columns>
    <columns>Call_Outcome__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Discharged_Home__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Latest_Discharge_Date__c</field>
        <operation>greaterThan</operation>
        <value>11/21/2024</value>
    </filters>
    <filters>
        <field>Community_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>No_Community_Provider__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <label>My Patients New</label>
    <sharedTo>
        <role>Intake_Coordinator</role>
    </sharedTo>
</ListView>